--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,25 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>calendar</artifactId>
+            <version>11.10.5</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>view</artifactId>
+            <version>11.10.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>recurrence</artifactId>
+            <version>11.6.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
